# rust-plasma

./: .gitignore  1.plasma.js  1.worker.js  232.worker.js  429.worker.js  552.plasma.js  958.plasma.js  Cargo.toml  Justfile  README.md  index.html  index.md  plasma.js  rustfmt.toml  worker.js
desktop/: .gitignore  Cargo.toml  Justfile  README.md  build.rs
desktop/.cargo/: config.toml
desktop/sdl-2.26.1-windows/i686/gnu-mingw/: libSDL2.la  libSDL2_test.la  libSDL2main.la
desktop/sdl-2.30.7-windows/i686/gnu-mingw/: libSDL2.la  libSDL2_test.la  libSDL2main.la
desktop/sdl-2.30.7-windows/x86_64/gnu-mingw/: libSDL2.la  libSDL2_test.la  libSDL2main.la
desktop/src/: main.rs  utils.rs
master/: aliases.js  index.html  search-index.js
master/implementors/core/fmt/: trait.Debug.js
master/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
master/plasma/: PhaseAmpConfig.t.html  PhaseAmpsSelect.t.html  PixelRGB24.t.html  all.html  fn.render_part.html  index.html  sidebar-items.js  struct.PhaseAmp.html  struct.PhaseAmpCfg.html  struct.PixelRGB24.html  struct.PixelRGBA8.html  struct.Plasma.html  trait.PhaseAmpAccess.html  trait.PhaseAmpConfig.html  trait.PhaseAmpsSelect.html  trait.PixelBuffer.html
master/plasma/phase_amp/: PhaseAmpCfg.t.html  struct.PhaseAmpCfg.html  trait.PhaseAmpAccess.html
master/plasma/plasma/: PixelBuffer.t.html  PixelRGBA8.t.html  struct.PixelRGBA8.html
master/rust/: aliases.js  crates.js  help.html  index.html  rustdoc.css  search-index.js  settings.html  source-files.js  src-files.js
master/rust/implementors/plasma/: trait.PixelBuffer.js
master/rust/plasma/: F32PaIter.t.html  F32PaPairIter.t.html  F32PaPairIterator.t.html  ICProducer.t.html  Mixer.t.html  PhaseAmpAccess.t.html  PhaseAmpsQuadIter.t.html  PixelRgb.t.html  Plasma.t.html  PlasmaICPExpExtPa.t.html  PlasmaICPFire.t.html  PlasmaLineCalcFireH.t.html  PlasmaMixIterExp.t.html  PlasmaMixIterFireH.t.html  PlasmaMixIterFireV.t.html  PlasmaMixer.t.html  PlasmaMixerFire.t.html  RgbIter.t.html  RgbaIter.t.html  all.html  fn.identity.html  fn.render_part.html  index.html  sidebar-items.js  struct.F32PaIter.html  struct.F32PaPairIter.html  struct.F32PaPairIterator.html  struct.F32PaQuadIter.html  struct.F32PaTripleIter.html  struct.PhaseAmp.html  struct.PhaseAmpCfg.html  struct.PhaseAmpsPairIter.html  struct.PhaseAmpsPairIterator.html  struct.PhaseAmpsQuadIter.html  struct.PhaseAmpsTripleIter.html  struct.PixelBufRGB16.html  struct.PixelBufRGB16x2.html  struct.PixelBufRGB24.html  struct.PixelBufRGBA32.html  struct.PixelBufRGBA8.html  (+38 more)
master/rust/plasma/color/: struct.PixelRgb.html  struct.RgbIter.html  struct.RgbaIter.html
master/rust/plasma/mixer/: IntermediateCalculator.t.html  IntermediateCalculatorProducer.t.html  trait.IntermediateCalculator.html  trait.IntermediateCalculatorProducer.html  trait.Mixer.html
master/rust/plasma/phase_amp/: F32PaQuadIter.t.html  F32PaTripleIter.t.html  PhaseAmp.t.html  PhaseAmpDataExp.t.html  PhaseAmpsPairIter.t.html  PhaseAmpsPairIterator.t.html  PhaseAmpsTripleIter.t.html  struct.F32PaIter.html  struct.F32PaPairIter.html  struct.F32PaPairIterator.html  struct.F32PaQuadIter.html  struct.F32PaTripleIter.html  struct.PhaseAmp.html  struct.PhaseAmpCfg.html  struct.PhaseAmpsPairIter.html  struct.PhaseAmpsPairIterator.html  struct.PhaseAmpsQuadIter.html  struct.PhaseAmpsTripleIter.html  trait.PhaseAmpAccess.html  trait.PhaseAmpConfig.html  trait.PhaseAmpDataExp.html  trait.PhaseAmpsSelect.html
master/src/plasma/: fast_math.rs.html  lib.rs.html  phase_amp.rs.html  plasma.rs.html
master/ts/: globals.html  index.html  modules.html
master/ts/assets/: search.js
master/ts/classes/: _plasma_web_d_.plasmahandle.html  plasma.BaseRenderer.html  plasma.CanvasRenderer.html  plasma.PlasmaGenerator.html  plasma.TextureRenderer.html  plasma.baserenderer.html  plasma.canvasrenderer.html  plasma.offscreencanvas.html  plasma.plasmagenerator.html  plasma.texturerenderer.html  plasma_web.PlasmaHandle.html
master/ts/functions/: plasma_web_bg_wasm.__wbg_plasmahandle_free.html  plasma_web_bg_wasm.__wbindgen_add_to_stack_pointer.html  plasma_web_bg_wasm.__wbindgen_exn_store.html  plasma_web_bg_wasm.__wbindgen_free.html  plasma_web_bg_wasm.__wbindgen_malloc.html  plasma_web_bg_wasm.plasmahandle_constructor.html  plasma_web_bg_wasm.plasmahandle_createImageBitmap.html  plasma_web_bg_wasm.plasmahandle_exportPhaseAmps.html  plasma_web_bg_wasm.plasmahandle_height.html  plasma_web_bg_wasm.plasmahandle_imageData.html  plasma_web_bg_wasm.plasmahandle_importPhaseAmps.html  plasma_web_bg_wasm.plasmahandle_maxSteps.html  plasma_web_bg_wasm.plasmahandle_minSteps.html  plasma_web_bg_wasm.plasmahandle_render.html  plasma_web_bg_wasm.plasmahandle_renderPhaseAmps.html  plasma_web_bg_wasm.plasmahandle_setArea.html  plasma_web_bg_wasm.plasmahandle_update.html  plasma_web_bg_wasm.plasmahandle_width.html
master/ts/interfaces/: plasma.BitmapGenerator.html  plasma.CanvasRendererOptions.html  plasma.PlasmaGeneratorOptions.html  plasma.bitmapdetail.html  plasma.bitmapgenerator.html  plasma.canvasrendereroptions.html  plasma.plasmageneratoroptions.html  plasma.workerplasmasetup.html
master/ts/modules/: _plasma_web_bg_d_.html  _plasma_web_d_.html  plasma.html  plasma_web.html  plasma_web_bg_wasm.html
master/ts/variables/: plasma.DefaultCanvasRendererOptions.html  plasma.DefaultPlasmaGeneratorOptions.html  plasma_web_bg_wasm.memory.html
plasma/: Cargo.toml  Justfile  README.md
plasma/benches/: export.rs  render.rs
plasma/src/: color.rs  fast_math.rs  lib.rs  m_polyfill.rs  mixer.rs  phase_amp.rs  pixel_buffer.rs  plasma.rs  simd_polyfill.rs
plasma/src/mixers/: mod.rs  plasma_default.rs
web/: .gitignore  Cargo.toml  Justfile  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.html
web/src/js/: _OBSOLETE.txt  index.js  loader.js  render.js  worker.js
web/src/rust/: lib.rs
web/src/ts/: canvas.ts  generator.ts  plasma.ts  plasma_loader.ts  renderer.ts  three.ts  webpack.d.ts  worker.ts  worker_loader.ts
(+121 files in other folders)
