[package]
name = "plasma-demo"
version = "0.1.0"
authors = ["Rafał Michalski <royaltm75@gmail.com>"]

license = "GPL-3.0-or-later"

publish = false

readme = "README.md"

build = "build.rs"

[features]
default = []
static-link = ["sdl2/static-link"]
use-pkgconfig = ["sdl2/use-pkgconfig"]

[dependencies]
sdl2 = "0.32.0-beta.2"
sdl2-sys = "0.32"
# rand = { git = "https://github.com/rust-random/rand.git" }
rand = "0.6.0-pre.1"
scoped_threadpool = "0.1"

[dependencies.plasma]
path = "../plasma"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "winerror", "shellscalingapi"]
