[package]
name = "plasma-demo"
description = "Plasma screen saver"
version = "0.1.0"
authors = ["Rafał Michalski <royal@yeondir.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

publish = false

readme = "README.md"

build = "build.rs"

[features]
default = []
bundled = ["sdl2/bundled"]
static-link = ["sdl2/static-link"]
use-pkgconfig = ["sdl2/use-pkgconfig"]
use-sleef = ["use-simd", "plasma/use-sleef"]
use-simd = ["plasma/use-simd"]

[dependencies]
sdl2 = "0.32"
sdl2-sys = "0.32"
rand = "^0.6"
scoped_threadpool = "0.1"

[dependencies.plasma]
path = "../plasma"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "winerror", "shellscalingapi"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Plasma eye-candy"
LegalCopyright = "Copyright © 2018 Rafał Michalski. This program comes with ABSOLUTELY NO WARRANTY."
