[package]
name = "plasma"
version = "0.1.0"
authors = ["Rafał Michalski <royal@yeondir.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

publish = false

readme = "README.md"

autobenches = false

[[bench]]
name = "render"
path = "benches/render.rs"
required-features = ["rand/std"]

[[bench]]
name = "export"
path = "benches/export.rs"
required-features = ["rand/std"]

[features]
default = []
use-sleef = ["use-simd", "packed_simd/sleef-sys"]
use-simd = ["packed_simd"]

[dependencies]
cfg-if = "^0.1"
derive_more = "^0.99"

[dependencies.packed_simd]
version = "^0.3.3"
optional = true
features = [] # "sleef-sys", "coresimd"

[dependencies.rand]
version = "^0.7"
default-features = false

[dev-dependencies.rand]
version = "^0.7"
default-features = true
