[package]
name = "plasma"
version = "0.2.0"
authors = ["Rafał Michalski <royal@yeondir.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://royaltm.github.io/rust-plasma/"
repository = "https://github.com/royaltm/rust-plasma"

publish = false

readme = "README.md"

autobenches = false

[[bench]]
name = "render"
path = "benches/render.rs"
required-features = ["rand/std"]

[[bench]]
name = "export"
path = "benches/export.rs"
required-features = ["rand/std"]

[features]
default = ["std"]
std = []
# use-sleef = ["use-simd", "packed_simd/sleef-sys"]
use-simd = ["std"] #["packed_simd"]

[dependencies]
cfg-if = "^1.0"
libm = { version = "0.2.8", optional = true }
micromath = { version = "2.1", optional = true }

[dependencies.derive_more]
version = "^1.0"
default-features = false
features = ["full"]

# [dependencies.packed_simd]
# package = "packed_simd_2"
# version = "^0.3.8"
# optional = true
# features = [] # "sleef-sys", "coresimd"

[dependencies.rand]
version = "^0.8"
default-features = false

[dev-dependencies.rand]
version = "^0.8"
default-features = true
