[package]
name = "plasma-web"
version = "0.1.0"
authors = ["Rafał Michalski <royal@yeondir.com>"]

license = "GPL-3.0-or-later"

publish = false

readme = "README.md"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["nightly"] }
js-sys = "0.3"
plasma = { path = "../plasma" }

[dependencies.rand]
version = "^0.6"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3"
features = [
  "ImageData",
  "Window",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope"
]
