[package]
name = "plasma-web"
version = "0.1.0"
authors = ["Rafał Michalski <royal@yeondir.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

publish = false

readme = "README.md"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2.61"
js-sys = "0.3"
plasma = { path = "../plasma" }

[dependencies.rand]
version = "^0.7"
features = ["getrandom", "wasm-bindgen"]
default-features = false

[dependencies.web-sys]
version = "0.3"
features = [
  "ImageData",
  "Window",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope"
]
