[package]
name = "plasma-web"
version = "0.1.0"
authors = ["Rafał Michalski <royal@yeondir.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://royaltm.github.io/rust-plasma/"
repository = "https://github.com/royaltm/rust-plasma"

publish = false

readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3"
plasma = { path = "../plasma" }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.rand]
version = "^0.8"
features = ["getrandom"]
default-features = false

[dependencies.web-sys]
version = "0.3"
features = [
  "ImageData",
  "Window",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope"
]
